* 2007-08-21 - thorben.betten@open-xchange.com

 - Bugfix #8987: Fixed html2text conversion while keeping quotes
 - Bugfix #8988: Fixed NPE on non-matching servlet path
 - Rough new mail interface

* 2007-08-21 - francisco.laguna@open-xchange.com

 - Fixed bug #8971. User userId and not contactId for internal user participants 
   in ICAL import.

* 2007-08-20 - martin.kauss@open-xchange.com

 - Fixed bug #8957. A search without a folder id returned -1 as folder instead
   of the real folder id. This has been fixed.

* 2007-08-20 - thorben.betten@open-xchange.com

 - Bugfix #8921: Fixed indexing of mail default folders dependent on spam
   activation
 - Bugfix #8937: Fixed typo by replacing all occurences of "instanciat"
   with "instantiat"
 - Fixed regex to detect uuencoded attachments inside a plaint text message
 - Fixed connection handling in:
   OXFolderAdminHelper.propagateUserModification()

* 2007-08-17 - marcus.klein@open-xchange.com

 - Bugfix #8934: Switched deleting user folder mapping and inserting admin
   folder mapping.
 - Bugfix #8936: Fixed SQL statement for deleting participants.

* 2007-08-17 - thorben.betten@open-xchange.com

 - More granular thread synchronization in folder and message caches
 - Added field "default_folder" to IMAP folders
 - Bugfix #8926: Avoiding setting IMAP's estimated file size when storing
   message attachments into infostore

* 2007-08-16 - thorben.betten@open-xchange.com

 - Partial bugfix #8885: Avoiding translating IO errors to "instantiation
   failed" errors
 - Partial bugfix #8839: New method added to OXFolderAdminHelper class to
   propagate user modifications throughout folder module
 - Bugfix #8901: Sending correct update informations (action=updates) on
   public folder's permission modification

* 2007-08-15 - ben.pahne@open-xchange.com

 - Bug Fix 8880: It was possible to move contacts into the global
   address book. Fixed this.

* 2007-08-15 - tobias.prinz@open-xchange.com
