@@ -3,6 +3,7 @@
  - Bugfix #8987: Fixed html2text conversion while keeping quotes
  - Bugfix #8988: Fixed NPE on non-matching servlet path
  - Rough new mail interface
+ - Completed IMAP folder storage
 
 * 2007-08-21 - francisco.laguna@open-xchange.com
 
